[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jarred Parr <jparr721@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.62.0"
neovim = "^0.3.1"
flake8 = "^3.8.4"
black = "^20.8b1"
uvicorn = "^0.12.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
